[package]
name = "fast-sparse-merkle-tree"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.84.0"
authors = ["Anjan Roy <hello@itzmeanjan.in>"]
description = "Fast Sparse Merkle Tree (SMT) library in Rust, using TurboSHAKE128 as default hash function"
readme = "README.md"
repository = "https://github.com/itzmeanjan/fast-sparse-merkle-tree"
license = "MIT"
keywords = ["sparse-merkle-tree", "smt", "turboshake", "zero-knowledge", "zkVM"]
categories = [
    "data-structures",
    "cryptography",
    "algorithms",
    "no-std",
    "database",
]

[features]
default = ["std", "turboshake", "blake3", "borsh"]
std = []
turboshake = ["dep:turboshake"]
blake3 = ["dep:blake3"]
borsh = ["dep:borsh"]

[dependencies]
turboshake = { version = "=0.5.0", optional = true }
blake3 = { version = "=1.8.2", optional = true }
borsh = { version = "=1.6.0", optional = true, features = [
    "unstable__schema",
    "derive",
] }
cfg-if = "=1.0.4"
itertools = "=0.14.0"

[dev-dependencies]
criterion = "=0.8.1"
const-hex = "=1.17.0"
proptest = "=1.9.0"
rand = "=0.9.2"

[[bench]]
name = "sparse_merkle_tree"
harness = false

[profile.optimized]
inherits = "release"
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3

[profile.test-release]
inherits = "release"
debug = true
debug-assertions = true
overflow-checks = true
opt-level = 3
